--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && copy package.json dist\\package.json",
     "start": "node ./dist/index.js",
-    "start:dev": "ts-node-dev --files ./src/index.ts"
+    "start:dev": "ts-node-dev --files ./src/index.ts index.d.ts"
   },
   "keywords": [],
   "author": "",
